tests/negative/syntax/unknown-token/err.expected
ERROR:
Unrecognized token at test.smol:4:12-4:13:
         3 | class Test {
         4 |     fn main$() Unit {
           |            ^
         5 |         var x String = "foo";
